--- a/src/styles/main-headerone.less
+++ b/src/styles/main-headerone.less
@@ -19,7 +19,6 @@ body {
         // max-width: 1260px;
         width: 100vw;
         justify-content: space-around;
-        // background: rgb(255, 0, 119);
         .headerOne {
             display: flex;
             justify-content: space-around;
@@ -30,7 +29,6 @@ body {
             width: 100vw;
             background: @color_blue_main;
             padding: 0px 15px 0px 15px;
-            // position: relative;
             .wrapper {
                 display: flex;
                 // width: 60%;
@@ -48,21 +46,19 @@ body {
                         .mobile-menu-a_one {
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            font-size: @font-size_main;
+                            font-size: @font-size_main + 1px;
                             color: @color_white_main;
                             text-decoration: none;
                             padding: 9px 13px 9px 13px;
-                            // background:#222;
                             transition: linear 0.5s;
                         }
                         .mobile-menu-a_two {
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            font-size: @font-size_main;
+                            font-size: @font-size_main + 1px;
                             color: @color_white_main;
                             text-decoration: none;
                             padding: 9px 13px 9px 13px;
-                            // background:#222;
                             transition: linear 0.5s;
                         }
                         .mobile-menu-a_one:hover {
@@ -83,7 +79,6 @@ body {
                 align-items: center;
                 justify-content: space-between;
                 padding: 0px 2px 0px 2px;
-                // background: yellow;
                 input {
                     display: none;    
                 }
@@ -114,7 +109,6 @@ body {
                     height: 39px;
                     padding: 0 6px;
                     cursor: pointer;
-                    // background:  #222;/////////////////////////////////
                     border-radius: 3px;
                     display: inline-block;
                     margin: -1px 0px 0px 0px;
@@ -170,7 +164,7 @@ body {
                             border-radius: 3px;
                             filter: contrast(100%);
                             filter: brightness(1300%);
-                            transition: 0.5s linear;  
+                            transition: 0.2s linear;  
                         }
                         .cart-block {
                             padding: 1px 2px;
@@ -233,7 +227,7 @@ body {
                 .cart:hover .a_cart .img_basket {
                     cursor: pointer;
                     filter: brightness(250%);   
-                    transition: 0.5s linear;
+                    transition: 0.2s linear;
                 }
             }
         }
