--- a/src/styles/main-headertwo.less
+++ b/src/styles/main-headertwo.less
@@ -1,7 +1,4 @@
 
-
-
-
 body {
     display: flex;
     justify-content: space-around;
@@ -20,7 +17,6 @@ body {
         // max-width: 1260px;
         width: 100vw;
         justify-content: space-around;
-        // background: rgb(255, 0, 119);
         .headerTwo {
             padding: 0;
             margin: 0;
@@ -130,7 +126,6 @@ body {
                     margin-top: 0px;
                     margin-top: 7px;
                     z-index: 88888;
-                    // background: #646464;
                     .search-box {
                         display: flex;
                         align-items: center;
@@ -146,7 +141,7 @@ body {
                             font-size: @font-size_main;
                             border-radius: 5px;
                             border: 2px solid @color_blue_main;
-                            background-color: #fcf8ec;////цвет под логотип
+                            background-color: @color_fon_logo;////цвет под логотип
                             min-width: 380px; 
                             text-align: center;   
                         }
@@ -159,7 +154,7 @@ body {
                             color: @color_blue_main;
                             border-radius: 5px;
                             border: 2px solid @color_blue_main;
-                            background-color: #fcf8ec;////цвет под логотип
+                            background-color: @color_fon_logo;////цвет под логотип
                             margin-left: 1px;
                             transition: linear 0.5s;
                             .fas {
