--- a/src/styles/main-media-headerone.less
+++ b/src/styles/main-media-headerone.less
@@ -31,7 +31,7 @@
                         background: @color_blue_main;
                         padding: 8px 5px 8px 5px; 
                         border-radius: 5px;
-                        border: solid 1px #fcf8ec;////цвет под логотип
+                        border: solid 1px @color_fon_logo;////цвет под логотип
                         .mobile-menu-li {
                             .mobile-menu-a_one {  
                                 font-size: @font-size_main - 1px;  
@@ -87,7 +87,7 @@
                         background: @color_blue_main;
                         padding: 8px 5px 8px 5px; 
                         border-radius: 5px;
-                        border: solid 1px #fcf8ec;////цвет под логотип
+                        border: solid 1px @color_fon_logo;////цвет под логотип
                         .mobile-menu-li {
                             .mobile-menu-a_one {
                                 font-size: @font-size_main - 2px;
