--- a/src/styles/main-menu-block.less
+++ b/src/styles/main-menu-block.less
@@ -17,20 +17,18 @@ body {
         max-width: 1260px;
         // width: 100vw;
         justify-content: space-around;
-        background: #45698b;
+        background: @color_blue_main;
         .main-menu-section {
             margin:0 auto;
             font-family: 'Roboto', sans-serif;
             font-weight: 400;
-            font-size: 17px;
+            font-size: @font-size_main;
             height: 50px;
             width: 100%;
             max-width: 1260px;
-    
-            // background: #45698b;
             padding: 0% 4% 0% 4%;//////////////////////////////////////////////////////++++++
             z-index: 44444;
-            // background: rgb(211, 65, 65);
+           
             .dws-menu * {
                 margin: 0;
                 padding: 0;  
@@ -40,22 +38,18 @@ body {
             }
             .dws-menu > ul {
                 display: flex;
-                // justify-content: center;
-                // justify-content: space-around;
                 justify-content: space-between;
             }
             .dws-menu > ul  li a {
                 display: block;
-               
-                background: #45698b;///////////////////////////////// 1 уровень фон
+                background: @color_blue_main;///////////////////////////////// 1 уровень фон
                 padding: 5px 10px 5px 10px;
-                // margin: 8px 0px;
                 height: 45px;
                 line-height: 36px;
-                color:  #f5f6fa;
+                color:  @color_white_main;
                 font-family: 'Roboto', sans-serif;
                 font-weight: 400;
-                font-size: 17px;
+                font-size: @font-size_main;
                 letter-spacing: 0px;
                 word-spacing: 3px;
                 text-decoration: none;
@@ -71,7 +65,7 @@ body {
                 position: absolute;
                 top: 9px;
                 left: 12px;
-                font-size: 18px;
+                font-size: @font-size_main + 1px;
                 padding: 5px 0px 5px 0px;
                 display: none;
             }
@@ -83,26 +77,25 @@ body {
             //     border-right: 1px solid #babbbb;
             // }
             .dws-menu ul li a:hover {
-                color: #ffd000;     
+                color: @color_yellow_main;     
                 transition: 0.5s linear;
             }
-            /////////
+            //////////////////////////////////////////////////////////
             .dws-menu  li ul {
                 position: absolute;
                 min-width: 250px;
                 display: none;   
             }
             .dws-menu li > ul li {
-                border: 1px solid #b8b8b8;   
+                border: 1px solid @color_gray_tone_one_main;   
             }
             .dws-menu li > ul li a {
-                text-transform: none;
-                background: #5b8ab6;//////////////////////////// 2 уровень фон
+                background: @color_dlue_tone_three_main;//////////////////////////// 2 уровень фон
                 text-transform: uppercase;
-                color:  #f5f6fa;
+                color:  @color_white_main;
                 font-family: 'Roboto', sans-serif;
                 font-weight: 400;
-                font-size: 17px;
+                font-size: @font-size_main;
                 text-decoration: none;
                 padding-left: 5px;
                 padding-right: 2px; 
@@ -116,15 +109,18 @@ body {
             .dws-menu li:hover > ul {
                 display: block;
             }
-          
             .dws-menu li > ul li ul li a {
                 // background:  #497285;
-                background: #84c4ff;//////////////////////////////////////// 3 уровень вон /////////////
-                color: #222222;
+                background: @color_dlue_tone_two_main;//////////////////////////////////////// 3 уровень вон /////////////
+                color: @color_black_main;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                font-size: @font-size_main;
+                text-decoration: none;
             }
             .dws-menu li > ul li ul li a:hover {
-                background: #c8e5ff;
-                color: #222222;
+                background: @color_dlue_tone_one_main;
+                color: @color_black_main;
             }
         } 
     }
@@ -132,7 +128,7 @@ body {
         content: "";
         width: 100vw;
         height: 50px;
-        background: #45698b;
+        background: @color_blue_main;
         position: absolute;   
     }
 }
