--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -68,25 +68,55 @@
 //   color: #ffd000;
 // }
 
+
 /* menu-headerone */
 @font-size_main: 17px;
+@color_white_main: #f5f6fa;
+@color_yellow_main: #ffd000;
+@color_blue_main: #45698b;
+@color_fon_logo: #fcf8ec;////цвет под логотип
 
 
-
-
-
- /* main-content-block*/
+/* menu-headertwo */
 @font-size_main: 17px;
-@background_main: #f5f6fa;
+@color_white_main: #f5f6fa;
+@color_yellow_main: #ffd000;
+@color_blue_main: #45698b;
+@color_fon_logo: #fcf8ec;////цвет под логотип
+
+
+/* mein-menu-block */
+@font-size_main: 17px;
+@color_black_main: #222222;
+@color_gray_tone_one_main:  #b8b8b8;  // border
+@color_white_main: #f5f6fa;
+@color_yellow_main: #ffd000;
+@color_green_main: #0faa0f;
+@color_blue_main: #45698b;
+@color_dlue_dark_main: #314b62; // темно синий 
+@color_dlue_tone_one_main: #c8e5ff; // уровень 3 при hover
+@color_dlue_tone_two_main: #84c4ff; // уровень 3
+@color_dlue_tone_three_main: #5b8ab6; // уровень 2
+
+
+ /* main-content-block */
+@font-size_main: 17px;
 @color_black_main: #222222;
 @color_white_main: #f5f6fa;
 @color_yellow_main: #ffd000;
 @color_blue_main: #45698b;
-@background_linear_main: #dcdde1;
+@color_linear_main: #dcdde1;// цвет линия
+
 
 /*  main-footer  */
 @font-size_main: 17px;
-
+@color_black_main: #222222;
+@color_white_main: #f5f6fa;
+@color_yellow_main: #ffd000;
+@color_blue_main: #45698b;
+@color_dlue_tone_four_main: #4f97db;
+@color_dlue_tone_five_main: #5aaaf5;
+@color_red_main: crimson;
 
 
 
@@ -104,14 +134,6 @@
 @import url('main-menu-block.less');
 @import url('main-content-block.less');
 @import url('main-footer.less');
-
-
-
-
-
-
-
-
 
 
 @import url('main-media-headerone.less');
