--- a/src/styles/main-content-block.less
+++ b/src/styles/main-content-block.less
@@ -14,7 +14,7 @@ body {
         min-height: 830px;
         width: 100%;
         max-width: 1260px;
-        background: @background_main;
+        background: @color_white_main;
         z-index: 11111;
         .aa__crumbs {
             display: flex;
@@ -22,15 +22,10 @@ body {
             min-height: 25px;
             // width: 100%;
             max-width: 1260px;
-            // background: #f5f6fa;
-            // padding-left: 60px;
-            // padding-right: 60px; 
-            // padding-top: 5px;
-            // padding-bottom: 5px;
             padding: 15px 40px 15px 40px;
             .aa__crumbs_text {
                 a {
-                    font-family: 'Roboto', sans-serif;
+                font-family: 'Roboto', sans-serif;
                 font-weight: 400;
                 font-size: @font-size_main - 3px;
                 letter-spacing: 0px;
@@ -52,18 +47,14 @@ body {
             max-width: 1260px;
             align-items: center;
             justify-content: center;
-            // background: #f5f6fa;
             .aa__c1_block1_linear {
                 margin: 0px 0px 30px 0px;
                 height: 3px;
                 width: 90%;
-                background: @background_linear_main;
-                 // background: rgb(147, 147, 147);
+                background: @color_linear_main;
             }
             .aa__c1_text_one {
                 color: @color_black_main;
-                // color: #497285;
-                text-transform: uppercase;
                 font-size: @font-size_main + 12px;
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 600;
@@ -72,7 +63,6 @@ body {
                 word-spacing: 10px;
                 text-align: center;
                 margin-top: -10px;
-                // border-bottom: 3px solid red;
                 border-bottom: 3px solid @color_blue_main;
                 position: relative;
             }
@@ -83,7 +73,6 @@ body {
                 height: 100%;
                 border-bottom: 3px solid @color_yellow_main;
                 position: absolute;
-                // margin-left: 25%;
             }
             .aa__c1_text_two {
                 color: @color_black_main;
@@ -103,23 +92,15 @@ body {
             padding: 0;
             margin: 0;
             display: flex;
-            // display: inline-block;
             flex-wrap: wrap;
             min-height: 180px;
             width: 100%;
             max-width: 1260px;
-            justify-content: space-around;
-            // flex-flow: column;
-            // justify-content: center;      
+            justify-content: space-around;     
             align-items: center;
-            // background: #f5f6fa;
             .aa__c2_section1 {
                 height: 135px;
                 max-width: 310px;
-                // overflow: scroll;
-                // overflow-y: scroll;
-                // scrollbar-width: none;
-                // background: #f5f6fa;
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-around;
@@ -161,7 +142,6 @@ body {
                 a .aa__c2s1_block2 {
                     height: 25px;
                     max-width: 310px;
-                    // background: #f5f6fa;
                     .aa__c2s1b2_text {
                         text-align: center;
                         margin-top: 1px; 
@@ -185,8 +165,6 @@ body {
                 transition: linear 0.5s;
             }
             .aa__c2_section1:hover a .aa__c2s1_block2 .aa__c2s1b2_text {
-                // color: #ffd667;
-                // color: #ffbb00;
                 color: @color_white_main;
                 transition: linear 0.5s;
             }
@@ -203,10 +181,6 @@ body {
                 transition: linear 0.5s;
             } 
         }
-        // .content_block_1-1::-webkit-scrollbar {
-        //     width: 0px;
-        //     height: 0px;
-        // }
         ////////////////////////////////////////////////////////////////////////////
         .aa__content3 {
             padding: 0;
@@ -218,13 +192,11 @@ body {
             max-width: 1260px;
             align-items: center;
             justify-content: center;
-            // background: #f5f6fa;
-            // background: #697bc0;
             .aa__c3_block1_linear {
                 margin: 0px 0px 30px 0px;
                 height: 3px;
                 width: 90%;
-                background: @background_linear_main;
+                background: @color_linear_main;
             }
             .aa__c3_text_one {
                 color: @color_black_main;
@@ -274,8 +246,6 @@ body {
             background-repeat: no-repeat;
             background-position: 0px 0px;
             background-size: cover;
-            // background: #f5f6fa;
-            // background: #697bc0;
             overflow: hidden;
             .aa__c4_section1 {
                 padding: 0;
@@ -283,12 +253,7 @@ body {
                 height: 324px;
                 width: 195px;
                 margin: 20px 15px 25px 15px;
-                // background: #f5f6fa;
-                // background:  #ffd000;
-                // background: #497285;
-               
                 box-shadow: 7px 7px #dddddd;
-                // box-shadow: 0 0 5px 5px rgb(233, 233, 233);
                 transition: linear 0.5s;
                 a {
                     text-decoration: none;
@@ -313,22 +278,16 @@ body {
                         -moz-transition: all 1s;
                         -o-transition: all 1s;
                         transition: all 1s; 
-                        
-                        transition: linear 1.0s;
+                        transition: linear 0.5s;
                     }
                 }
                 a .aa__c4s1_block2 {
-                    // display: flex;
-                    // justify-content: space-around;
                     min-height: 22px;
                     width: 195px;
-                    // background: #40739e;///////////////////////////////
-                    // background:  #497285;///////////////////////////////
                     background-image: url("../images/fon_parts_three.jpg");
                     background-size: cover; 
                     margin-top: -4px;
                     transition: linear 0.5s;
-                    // background: #b06548;
                     .aa__c4s1b2_text {
                         text-align: center;
                         padding: 5px 0px 4px 0px;
@@ -369,22 +328,17 @@ body {
         }
         ////////////////////////////////////////////////////////////////////////////
         .aa__content4_button {
-            // background: #f5f6fa;
             .button_catalog {
                 background-image: url("../images/fon_parts_three.jpg");
                 background-size: cover; 
                 background-size: 300px 70px;
-                // background:linear-gradient(to bottom, #FFFFFF, #E6E6E6) #F5F5F5 repeat-x;
-                // background: #497285;
                 border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
                 border-radius: 4px;
                 border-style: solid;
                 border-width: 1px;
                 box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-                // color: #333333;
                 text-decoration:none;
                 display:block;
-                // font-size: 14px;
                 color: @color_white_main;
                 text-transform: uppercase;
                 font-family: 'Roboto', sans-serif;
@@ -397,7 +351,6 @@ body {
                 margin: 20px auto;
                 padding: 12px 12px;
                 text-align: center;
-                // text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
                 // vertical-align: middle;
                 position: relative;
                 -webkit-transition-duration: 0.3s;
@@ -451,17 +404,13 @@ body {
             max-width: 1260px;
             align-items: center;
             justify-content: center;
-            // background-image: url("../images/background-s.jpg");
-            // background: #f5f6fa;
-            // background: yellow;
             .aa__c5_block1_linear {
                 height: 3px;
                 width: 90%;
-                background: @background_linear_main;
+                background: @color_linear_main;
                 margin: 0px 0px 30px 0px;
             }
             .aa__c5_text_one {
-                // margin-top: 15px;
                 color: @color_black_main;
                 text-transform: uppercase;
                 font-size: @font-size_main + 12px;
@@ -502,28 +451,20 @@ body {
             padding: 0;
             margin: 0;
             display: flex;
-            // flex-direction: column;
             flex-wrap: wrap;
             min-height: 260px;
             width: 100%;
             max-width: 1260px;
             justify-content: space-around;
-            // background: #f5f6fa;
-            // background: rgb(211, 23, 23);
             overflow: hidden;
             .aa__c6_content6 {
                 height: 415px;
                 max-width: 1220px;
-                // overflow: scroll;
-                // overflow-y: scroll;
-                // scrollbar-width: none;
-                // background: #f5f6fa;
                 padding: 10px;
                 margin: 0;
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-around;
-                // background: rgb(45, 211, 23);
                 overflow: hidden;
                 .aa__c6c6_section1 {
                     margin: 5px 10px 20px 10px;
@@ -532,11 +473,7 @@ body {
                     background-image: url("../images/fon_parts_one.jpg");
                     background-size: cover; 
                     background-size: 260px 130px;
-                    transition: linear 1.0s;
-                    // border: 1px solid #25425a;
                     text-align: center;
-                    // box-shadow: 7px 7px rgb(147, 147, 147);
-                    // box-shadow: 0 5px 15px 0 rgba(0,0,0,0.2); 
                     box-shadow: 7px 7px #dddddd;
                     overflow: hidden;
                     transition: linear 0.5s;
@@ -606,29 +543,20 @@ body {
                     transition: linear 0.5s;            
                 }      
             }
-            // .content_block_1-5w::-webkit-scrollbar {
-            //     width: 0px;
-            //     height: 0px;
-            // }
         }
         ///////////////////////////////////////////////////////////////////////////
         .aa__content6_button {
-            // background: #f5f6fa;
             .button_partsList {
                 background-image: url("../images/fon_parts_three.jpg");
                 background-size: cover; 
                 background-size: 300px 70px;
-                // background:linear-gradient(to bottom, #FFFFFF, #E6E6E6) #F5F5F5 repeat-x;
-                // background: #497285;
                 border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
                 border-radius: 4px;
                 border-style: solid;
                 border-width: 1px;
                 box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-                // color: #333333;
                 text-decoration:none;
                 display:block;
-                // font-size: 14px;
                 color: @color_white_main;
                 text-transform: uppercase;
                 font-family: 'Roboto', sans-serif;
@@ -641,7 +569,6 @@ body {
                 margin: 20px auto;
                 padding: 12px 12px;
                 text-align: center;
-                // text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
                 // vertical-align: middle;
                 position: relative;
                 -webkit-transition-duration: 0.3s;
@@ -695,14 +622,11 @@ body {
             max-width: 1260px;
             align-items: center;
             justify-content: center;
-            // background: #f5f6fa;
-            // background: #697bc0;
             .aa__c7_block1_linear {
                 margin: 20px 0px 30px 0px;
                 height: 3px;
                 width: 90%;
-                // background: rgb(147, 147, 147);
-                background: @background_linear_main;
+                background: @color_linear_main;
             }
             .aa__c7_text_one {
                 color: @color_black_main;
@@ -715,7 +639,6 @@ body {
                 word-spacing: 10px;
                 text-align: center;
                 margin-top: -10px;
-                // border-bottom: 3px solid red;
                 border-bottom: 3px solid @color_blue_main;
                 position: relative;
             }
@@ -750,12 +673,8 @@ body {
             min-height: 180px;
             width: 100%;
             max-width: 1260px;
-            justify-content: space-around;
-            // flex-flow: column;
-            // justify-content: center;      
+            justify-content: space-around;      
             align-items: center;
-            // background: #f5f6fa;
-            // background: #2147e0;
             .aa__c8_section1 {
                 height: 135px;
                 max-width: 310px;
